--- a/Makefile.am
+++ b/Makefile.am
@@ -26,6 +26,7 @@ AM_CXXFLAGS = -std=c++11
 nobase_dist_include_HEADERS = \
 	platform.h \
 	wacs-config.h wacs.h \
+	lmdbwriter.h NanoMessage.h errorcodes.h \
 	$(ARGT3HEADERS)
 
 common_src = $(ARGT3SOURCES)
@@ -35,9 +36,10 @@ common_src = $(ARGT3SOURCES)
 #
 wacs_SOURCES= \
 	wacs-config.cpp wacs.cpp \
+	lmdbwriter.cpp NanoMessage.cpp errorcodes.cpp \
 	$(common_src)
 
-wacs_LDADD = $(commonlibs) -ldl
+wacs_LDADD = $(commonlibs) -lmdbx -lnanomsg
 wacs_CPPFLAGS = $(commoncppflags)
 
 #
