--- a/configure.ac
+++ b/configure.ac
@@ -24,11 +24,12 @@ LDFLAGS="$LDFLAGS -L/usr/local/lib -L/usr/local/opt/openssl@1.1/lib"
 # Checks for header files. Add /usr/local/include for IS X.
 CFLAGS="$CFLAGS -I/usr/local/include"
 AC_CHECK_HEADERS([openssl/ssl.h], [], AC_MSG_ERROR([Could not find openssl/ssl.h. Try $ ./configure CFLAGS='-Iyour-openssl-include-path]))
-AC_CHECK_HEADERS([curl/curl.h], [], AC_MSG_ERROR([Could not find curl/curl.h. Try $ ./configure CFLAGS='-Iyour-curl-include-path]))
+AC_CHECK_HEADERS([nanomsg/nn.h], [], AC_MSG_ERROR([Could not find nanomsg/nn.h. Try $ ./configure CFLAGS='-Iyour-nanomsg-include-path]))
 AC_CHECK_HEADERS([fcntl.h limits.h stdint.h string.h sys/time.h termios.h unistd.h])
 
 # Checks for libraries. Add /usr/local/lib for OS X
 AC_CHECK_LIB([crypto], [EVP_CIPHER_CTX_reset], [], AC_MSG_ERROR([Could not find openssl >= 1.1.0. Try $ ./configure LDFLAGS='-Lyour-openssl2-lib-path']))
+AC_CHECK_LIB([nanomsg], [nn_connect], [], AC_MSG_ERROR([Could not find nanomsg library. Try $ ./configure LDFLAGS='-Lyour-nanomsg-lib-path']))
 # AC_CHECK_LIB(curl, curl_easy_init, [], AC_MSG_ERROR([Could not find libcurl. Try $ ./configure LDFLAGS='-Lyour-curl-lib-path']))
 
 # Checks for typedefs, structures, and compiler characteristics.
