--- a/Makefile.am
+++ b/Makefile.am
@@ -27,6 +27,7 @@ nobase_dist_include_HEADERS = \
 	platform.h \
 	wacs-config.h wacs.h \
 	lmdbwriter.h NanoMessage.h errorcodes.h \
+	daemonize.h \
 	$(ARGT3HEADERS)
 
 common_src = $(ARGT3SOURCES)
@@ -37,6 +38,7 @@ common_src = $(ARGT3SOURCES)
 wacs_SOURCES= \
 	wacs-config.cpp wacs.cpp \
 	lmdbwriter.cpp NanoMessage.cpp errorcodes.cpp \
+	daemonize.cpp \
 	$(common_src)
 
 wacs_LDADD = $(commonlibs) -lmdbx -lnanomsg
