--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,8 @@ AC_CHECK_HEADERS([fcntl.h limits.h stdint.h string.h sys/time.h termios.h unistd
 # Checks for libraries. Add /usr/local/lib for OS X
 AC_CHECK_LIB([crypto], [EVP_CIPHER_CTX_reset], [], AC_MSG_ERROR([Could not find openssl >= 1.1.0. Try $ ./configure LDFLAGS='-Lyour-openssl2-lib-path']))
 AC_CHECK_LIB([nanomsg], [nn_connect], [], AC_MSG_ERROR([Could not find nanomsg library. Try $ ./configure LDFLAGS='-Lyour-nanomsg-lib-path']))
+AC_CHECK_LIB([microhttpd], [MHD_start_daemon], [], AC_MSG_ERROR([Could not find microhttpd library. Try $ ./configure LDFLAGS='-Lyour-microhttpd-lib-path']))
+
 # AC_CHECK_LIB(curl, curl_easy_init, [], AC_MSG_ERROR([Could not find libcurl. Try $ ./configure LDFLAGS='-Lyour-curl-lib-path']))
 
 # Checks for typedefs, structures, and compiler characteristics.
