--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 #	Binaries
 bin_PROGRAMS = \
-	wacs wacsc wacs-http
+	wacs wacsc wacs-http wacs-snmp
 
 #	Libraries
 lib_LIBRARIES = \
@@ -34,6 +34,10 @@ nobase_dist_include_HEADERS = \
 	wacsc-config.h wacsc.h utilstring.h http-server.h \
 	dblog.h hostapd-log-entry.h send-log-entry.h lmdbwriter.h NanoMessage.h errorcodes.h \
 	daemonize.h \
+	snmpagent-wacs.h snmp-params.h utilsnmp.h \
+	wacs-snmp-config.h \
+	third_party/get_rss/get_rss.h \
+	if-ip-address.h \
 	$(ARGT3HEADERS)
 
 common_src = $(ARGT3SOURCES)
@@ -60,14 +64,18 @@ libwacs_la_LDFLAGS = -version-info 0:1:0
 #
 #	wacs
 #
-wacs_SOURCES= \
+wacs_SOURCES = \
 	wacs-config.cpp wacs.cpp \
 	lmdbwriter.cpp NanoMessage.cpp errorcodes.cpp \
 	dblog.cpp hostapd-log-entry.cpp \
 	daemonize.cpp utilstring.cpp \
+	snmpagent-wacs.cpp snmp-params.cpp utilsnmp.cpp \
+	if-ip-address.cpp \
+	third_party/get_rss/get_rss.c \
 	$(common_src)
-wacs_LDADD = $(commonlibs) -lmdbx -lnanomsg
-wacs_CPPFLAGS = $(commoncppflags)
+wacs_LDADD = $(commonlibs) -lmdbx -lnanomsg \
+	-lnetsnmp -lnetsnmpagent
+wacs_CPPFLAGS = $(commoncppflags) -DUSE_SNMP
 
 #
 #	wacsc
@@ -80,6 +88,15 @@ wacsc_SOURCES= \
 	$(common_src)
 wacsc_LDADD = $(commonlibs) -lmdbx -lnanomsg
 wacsc_CPPFLAGS = $(commoncppflags)
+
+#
+#	wacs-snmp
+#
+wacs_snmp_SOURCES= \
+	wacs-snmp-config.cpp wacs-snmp.cpp \
+	$(common_src)
+wacs_snmp_LDADD = $(commonlibs) -lnetsnmp -lnetsnmpagent
+wacs_snmp_CPPFLAGS = $(commoncppflags)
 
 #
 #	wacs-http
@@ -99,6 +116,8 @@ wacs_http_CPPFLAGS = $(commoncppflags)
 configdir = $(datadir)
 dist_config_DATA = \
 	autogen.sh \
+	snmpd.conf \
+	mib/COMMANDUS-SMI-MIB  mib/WACS-COMMANDUS-MIB \
 	LICENSE COPYING CODE_OF_CONDUCT.md CONTRIBUTING.md HISTORY README.md \
-	third_party/argtable3/README.argtable3.md
+	third_party/argtable3/README.argtable3.md \
 	autogen.sh
