Ass missed SNMP

--- a/Makefile.am
+++ b/Makefile.am
@@ -45,7 +45,8 @@ common_src = $(ARGT3SOURCES)
 wacs_lib_source = \
 	lmdbwriter.cpp NanoMessage.cpp errorcodes.cpp \
 	dblog.cpp hostapd-log-entry.cpp send-log-entry.cpp \
-	utilstring.cpp
+	utilstring.cpp \
+	snmpagent-wacs.cpp snmp-params.cpp utilsnmp.h
 
 #
 #	libwpn.a
