--- a/configure.ac
+++ b/configure.ac
@@ -15,10 +15,17 @@ AC_ENABLE_SHARED
 AC_PROG_LIBTOOL
 
 AM_CONDITIONAL([DEBUG], [test x$debug = xtrue])
+build_mac=no
+# Detect the target system
+case "${host_os}" in
+  darwin*)
+    build_mac=yes
+    ;;
+esac
+AM_CONDITIONAL([OS_MACH], [test "$build_mac" = "yes"])
 
-# MacOS: 
-#   brew install openssl@1.1
-# install openssl into /usr/local/lib/opt/openssl@1.1
+# MacOS: install openssl into /usr/local/lib/opt/openssl@1.1
+# brew install openssl@1.1
 LDFLAGS="$LDFLAGS -L/usr/local/lib -L/usr/local/opt/openssl@1.1/lib"
 
 # Checks for header files. Add /usr/local/include for OS X.
